--- a/bibliography.bib
+++ b/bibliography.bib
@@ -47,6 +47,18 @@
     urldate = {2019-08-19}
 }
 
+@article{flynn1966,
+    author = {Flynn, Michael J.},
+    title = {Some Computer Organizations and Their Effectiveness},
+    journal = {IEEE Transactions on Computers},
+    volume = {Jahrgang C-21},
+    number = {Ausgabe 9},
+    year = 1966,
+    month = sep,
+    pages = {948--960},
+    doi = {10.1109/TC.1972.5009071}
+}
+
 @article{lawson1979,
     author = {Lawson, Charles L. and Hanson, Richard J. and Kincaid, David Ronald and Krogh, Fred T.},
     title = {Basic Linear Algebra Subprograms for Fortran Usage},
@@ -55,7 +67,8 @@
     number = {Ausgabe 3},
     year = 1979,
     month = sep,
-    pages = {308--323}
+    pages = {308--323},
+    doi = {10.1145/355841.355847}
 }
 
 
